Changed all occurences of old field names to generalised ones.
