# MongoDB Server/models/images.js
@@ -5,10 +5,10 @@ let Schema = mongoose.Schema;
 // define data format within the db
 let Image = new Schema(
     {
-        image_path: {type: String, required: true},
-        image_author: {type: String, required: true},
-        image_title: {type: String},
-        image_description: {type: String}
+        imagePath: {type: String, required: true},
+        author: {type: String, required: true},
+        imageTitle: {type: String},
+        imageDescription: {type: String}
     }
 );
 
